Removed H1 Element from pages as overlap is issue.

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   background-color: #070707;
-  padding: 15px;
+  padding: 10px;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* added box-shadow to create separation */
 }
